<resources>
    <string name="app_name">BookMyBus</string>
    <string name="title_activity_home">ActivityHome</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="login">Login</string>
    <string name="calcel_ticket">Calcel Ticket</string>
    <string name="about_us">About Us</string>
    <string name="share_app">Share App</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="take_photo">take photo</string>
    <string name="goto_main">goto main</string>
    <string name="samilarity">samilarity:</string>
    <string name="departure">Departure:</string>
    <string name="arrival">Arrival:</string>
    <string name="duration">Duration:</string>
    <string name="passenger_details">PASSENGER DETAILS</string>
    <string name="ticket_details">TICKET DETAILS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mail_from_username">vyomhpatel@gmail.com</string>
    <string name="mail_from_p">WelcomeVyom</string>
    <string name="outbound">OUTBOUND</string>
    <string name="recipient">mr.vyompatel@gmail.com</string>
    <string name="mail_msg">Thank you for giving us a chance to serve you as your travel partner. You will take the bus on </string>
    <string name="mail_sub">Ticket Confirmation For BookMyBus</string>
    <string name="googlepay_status_unavailable" translatable="false">Unfortunately, Google Pay is not available on this phone.</string>
    <string name="googlepay_status_checking" translatable="false">Checking if Google Pay is available...</string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for %s!</string>
    <string name="confirm">Confirm</string>
    <string name="copyright">All rights reserved by © BookMyBus</string>
    <string name="seats">Seats</string>
    <string name="go">GO!</string>
    <string name="destination">destination</string>
    <string name="start">start</string>
    <string name="technologies_used">
        Technologies Used:\n\n
        Retrofit \n
        Volley \n
        Face Detection \n
        Face Recognization \n
        Bar code generation\n
        Dagger 2 \n
        Google calender \n
        Lazy loading \n
        Java email \n
    </string>
    <string name="booked">This Seat is Booked</string>
    <string name="reserved">This seat is Reserved</string>
    <string name="shared_pref_title">bmb_shared</string>
    <string name="event">Event</string>
    <string name="greeting">Hoping to see you on the board. To book more tickets using BookMyBus use: https://www.bookmybus.com</string>
    <string name="comfirm">comfirm</string>
    <string name="arrival_date">Arrival Date</string>
</resources>
