<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".view.facerecognition.FaceRecognition">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/ll"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/face1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="top"
            android:src="@mipmap/ic_contact_picture" />

        <TextView
            android:id="@+id/samilarity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/samilarity"
            android:textColor="#FF000000"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/face2"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@mipmap/ic_contact_picture" />

    </android.support.design.widget.CoordinatorLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@id/ll">

        <b12app.vyom.com.bookmybus.facerecognize.FaceRecognize
            android:id="@+id/faceRecognition"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/switch_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:background="@android:drawable/ic_menu_camera" />

        <Button
            android:id="@+id/bn_get_face"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/gotoMain"
            android:layout_marginEnd="126dp"
            android:text="@string/take_photo" />
        <Button
            android:id="@+id/gotoMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="10dp"
            android:onClick="setPermissions"
            android:text="@string/goto_main" />
    </RelativeLayout>
</RelativeLayout>