<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cofirmedTicketContainer"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="INBOUND"
            android:textSize="@dimen/txt13"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="12dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_border"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvCheckIBMonth"
                    android:text="November"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_reg"
                    android:gravity="center_vertical|center" />
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/tvCheckIBDate"
                    android:text="25"
                    android:textColor="#26a69a"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:gravity="center_vertical|center" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="@dimen/wdt_75"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_reg"
                    android:text="@string/departure"
                    />
                <TextView
                    android:layout_width="@dimen/wdt_75"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_reg"
                    android:text="@string/arrival"
                    />
                <TextView
                    android:layout_width="@dimen/wdt_75"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_reg"
                    android:text="@string/duration"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_reg"
                    android:id="@+id/tvCheckIBDeparture"
                    android:text="09:00 PM"
                    android:textColor="#000000" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_reg"
                    android:id="@+id/tvCheckIBArrival"
                    android:text="11:00 PM"
                    android:textColor="#000000" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_reg"
                    android:id="@+id/tvCheckIBDuration"
                    android:text="02:00 HR"
                    android:textColor="#000000" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/outbound"
            android:textSize="@dimen/txt13"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="12dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_border"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvCheckOBMonth"
                    android:text="November"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_reg"
                    android:gravity="center_vertical|center" />
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/tvCheckOBDate"
                    android:text="26"
                    android:textColor="#26a69a"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:gravity="center_vertical|center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="@dimen/wdt_75"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_reg"
                    android:text="@string/departure"
                    />
                <TextView
                    android:layout_width="@dimen/wdt_75"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_reg"
                    android:text="@string/arrival"
                    />
                <TextView
                    android:layout_width="@dimen/wdt_75"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_reg"
                    android:text="@string/duration"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_reg"
                    android:id="@+id/tvCheckOBDeparture"
                    android:text="09:00 PM"
                    android:textColor="#000000" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_reg"
                    android:id="@+id/tvCheckOBArrival"
                    android:text="11:00 PM"
                    android:textColor="#000000" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_reg"
                    android:id="@+id/tvCheckOBDuration"
                    android:text="02:00 HR"
                    android:textColor="#000000" />
            </LinearLayout>
        </LinearLayout>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:background="@drawable/rounded_border"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:textSize="@dimen/text_reg"
                android:textColor="#000000"
                android:layout_weight="1"
                android:text="Seat No:"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:textSize="@dimen/text_reg"
                android:textColor="#000000"
                android:paddingLeft="10dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_bg"
                android:id="@+id/seatNo"
                android:text="1" />
        </TableRow>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_border"
            android:padding="8dp"
            android:orientation="vertical">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:textSize="@dimen/text_reg"
                    android:textColor="#000000"
                    android:layout_weight="1"
                    android:text="Total"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:paddingLeft="10dp"
                    android:textColor="#000000"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/text_reg"
                    android:id="@+id/etCheckTotalNotax"
                    android:background="@drawable/button_bg"
                    android:text="₹ 50" />
            </TableRow>
               </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_border">
            <TextView
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:id="@+id/tvCartTotal"
                android:text="₹"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center_vertical"/>

            <Button
                android:id="@+id/btnBookTicket"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical|right"
                android:layout_marginLeft="100dp"
                android:background="@drawable/btn_checkout_bg"
                android:text="@string/confirm"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <include
            android:id="@+id/googlepay_button"
            layout="@layout/google_pay_button"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buy_button_height"
             />

        <TextView
            android:id="@+id/tvTerms"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="25dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/copyright"
            android:textAlignment="center"
            android:textColor="#b0bec5"
            android:textSize="11dp" />
    </LinearLayout>
</ScrollView>